# rvm_soniccd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Rvm_Win64.sln  rvm.kdev4
MacUI/: AppDelegate.h  AppDelegate.m  SetupViewController.h  SetupViewController.m
Rvm_Win64/: Rvm_Win64.aps  Rvm_Win64.rc  Rvm_Win64.vcxproj  Rvm_Win64.vcxproj.filters  SDL_win32_main.c  resource.h  win_main.c
Rvm_Win64/references/: SDL.lib  SDL_mixer.lib  SDLmain.lib
SDL2.framework/Versions/A/: SDL2
SDL2.framework/Versions/A/Frameworks/hidapi.framework/Versions/A/: hidapi
SDL2.framework/Versions/A/Frameworks/hidapi.framework/Versions/A/Resources/: Info.plist
SDL2.framework/Versions/A/Resources/: Info.plist  default.metallib
SDL2.framework/Versions/A/_CodeSignature/: CodeResources
SDL2_mixer.framework/Versions/A/: SDL2_mixer
SDL2_mixer.framework/Versions/A/Frameworks/Ogg.framework/Versions/A/: Ogg
SDL2_mixer.framework/Versions/A/Frameworks/Ogg.framework/Versions/A/Resources/: Info.plist
SDL2_mixer.framework/Versions/A/Frameworks/Ogg.framework/Versions/A/_CodeSignature/: CodeResources
SDL2_mixer.framework/Versions/A/Frameworks/Vorbis.framework/Versions/A/: Vorbis
SDL2_mixer.framework/Versions/A/Resources/: Info.plist
SDL2_mixer.framework/Versions/A/_CodeSignature/: CodeResources
SDL_mixer.framework/Versions/A/: SDL_mixer
SDL_mixer.framework/Versions/A/Resources/: Info.plist
rvm/: AppDelegate.h  AppDelegate.m  Info.plist  SDLMain.m  createRelease.sh  main.c  main.m  main_linux.c
rvm.xcodeproj/: project.pbxproj
rvm.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
rvm.xcodeproj/project.xcworkspace/xcuserdata/sappharad.xcuserdatad/: UserInterfaceState.xcuserstate
rvm.xcodeproj/xcshareddata/xcschemes/: rvm.xcscheme
rvm/Assets.xcassets/AppIcon.appiconset/: Contents.json
rvm/Base.lproj/: MainMenu.xib
rvm/Core/: AnimationFileList.h  AnimationSystem.c  AnimationSystem.h  AudioPlayback.c  AudioPlayback.h  AudioPlayback_dc.c  AudioPlayback_dc.h  CollisionSensor.h  DrawVertex.h  DrawVertex3D.h  EngineCallbacks.c  EngineCallbacks.h  Face3D.h  FileIO.c  FileIO.h  FunctionScript.h  GfxSurfaceDesc.h  GifDecoder.h  GifLoader.c  GifLoader.h  GlobalAppDefinitions.c  GlobalAppDefinitions.h  GraphicsSystem.c  GraphicsSystem.h  InputResult.h  InputSystem.c  InputSystem.h  InputSystem_dc.c  InputSystem_dc.h  LayoutMap.h  LineScrollParallax.h  Mappings128x128.h  MpvPlayer.c  MpvPlayer.h  MusicTrackInfo.h  ObjectEntity.h  ObjectScript.h  ObjectSystem.c  ObjectSystem.h  PaletteEntry.h  (+19 more)
rvm/Core_dreamcast/: AnimationSystem.c  AnimationSystem.h  AudioPlayback.c  CollisionBox.h  CollisionMask16x16.h  DrawVertex.h  EngineCallbacks.c  EngineCallbacks.h  FileData.h  FileIO.c  FileIO.h  FontCharacter.h  GifDecoder.h  GifLoader.c  GifLoader.h  GlobalAppDefinitions.c  GlobalAppDefinitions.h  GraphicsSystem.c  GraphicsSystem.h  InputSystem.c  ObjectDrawList.h  ObjectSystem.c  ObjectSystem.h  PlayerObject.h  PlayerStatistics.h  PlayerSystem.c  PlayerSystem.h  Quad2D.h  RenderDevice.c  RenderDevice.h  Scene3D.h  ScriptEngine.h  StageSystem.h  TextMenu.h  Vertex2D.h
(+4 files in other folders)
